--- a/playbooks/db.yml
+++ b/playbooks/db.yml
@@ -3,8 +3,5 @@
   roles: 
   - db
   pre_tasks:
-    - name: clone repo
-      git:
-        repo: https://github.com/express42/reddit.git # адрес репозитория
-        dest: /opt/reddit
-        version: microservices_for_mc
+  - name: clone repo
+    import_tasks: install_repo.yaml
