--- a/playbooks/ui_and_comment.yml
+++ b/playbooks/ui_and_comment.yml
@@ -7,11 +7,8 @@
     vars: 
     - components: [ui]
   pre_tasks:
-    - name: clone repo
-      git:
-        repo: https://github.com/express42/reddit.git 
-        dest: /opt/reddit
-        version: microservices_for_mc
+  - name: clone repo
+    import_tasks: install_repo.yaml
 
 - hosts: comment
   become: true
@@ -21,8 +18,5 @@
     vars: 
     - components: [comment]
   pre_tasks:
-    - name: clone repo
-      git:
-        repo: https://github.com/express42/reddit.git
-        dest: /opt/reddit
-        version: microservices_for_mc
+  - name: clone repo
+    import_tasks: install_repo.yaml
